sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Credit_Account__c.field-meta.xml
<CustomField>
    <fullName>Credit_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Credit Account</label>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Inventory Transactions (Credit Account)</relationshipLabel>
    <relationshipName>Inventory_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>