sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Debit_Account__c.field-meta.xml
<CustomField>
    <fullName>Debit_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Debit Account</label>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>