sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Dimension_3__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 3</label>
    <referenceTo>c2g__codaDimension3__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>