sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Document_Value__c.field-meta.xml
<CustomField>
    <fullName>Document_Value__c</fullName>
    <label>Document Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>