sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Inventory_Requisition_Issuance__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Requisition_Issuance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Inventory Requisition Issuance</description>
    <inlineHelpText>Inventory Requisition Issuance</inlineHelpText>
    <label>Inventory Requisition Issuance</label>
    <referenceTo>Inventory_Requisition_Issuance__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>