sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>