sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Item_Company__c.field-meta.xml
<CustomField>
    <fullName>Item_Company__c</fullName>
    <formula>Item__r.Item_Company__r.lookup_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Company</label>
    <type>Text</type>
</CustomField>