sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Item_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Item_Unit_Price__c</fullName>
    <description>Unit Price For the Transaction</description>
    <label>Item Net Unit Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>