sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Journal_Entry_Number__c.field-meta.xml
<CustomField>
    <fullName>Journal_Entry_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal Entry Number</label>
    <referenceTo>c2g__codaJournal__c</referenceTo>
    <relationshipLabel>Inventory Transactions (Journal Entry Number)</relationshipLabel>
    <relationshipName>Inventory_Transactions2</relationshipName>
    <type>Lookup</type>
</CustomField>