sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Item__c</field>
            <operation>equals</operation>
            <valueField>Inventory_Item_Location__c.Inventory_Item__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory_Item_Location__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>