sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Location_Lot__c.field-meta.xml
<CustomField>
    <fullName>Location_Lot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location Lot</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Item_Location_Lot__c.Item_Location__r.Inventory_Item__c</field>
            <operation>equals</operation>
            <valueField>$Source.Item__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Item_Location_Lot__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>