sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Purchase_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Line</label>
    <referenceTo>Purchase_Order_Line_Item__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>