sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Quantity_At_Location__c.field-meta.xml
<CustomField>
    <fullName>Quantity_At_Location__c</fullName>
    <label>Quantity At Location</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>