sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Quantity_Impact__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Impact__c</fullName>
    <description>Determines whether the transactions increases or decreases the inventory</description>
    <inlineHelpText>I (Increase), D (Decrease), S (Scrap), U(Unit Price Change)</inlineHelpText>
    <label>Quantity Impact</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <color>#0B6FCE</color>
                <label>I</label>
            </value>
            <value>
                <fullName>D</fullName>
                <color>#78C953</color>
                <label>D</label>
            </value>
            <value>
                <fullName>S</fullName>
                <color>#E27001</color>
                <label>S</label>
            </value>
            <value>
                <fullName>U</fullName>
                <color>#A845DC</color>
                <label>U</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>