sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Reversed_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Reversed_Transaction_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The new transaction created after the reversal has been completed</description>
    <inlineHelpText>The new transaction created after the reversal has been completed</inlineHelpText>
    <label>Reversed Transaction ID</label>
    <referenceTo>Inventory_Transaction__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>