sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Indicates what transaction this is i.e. Inventory Adjust, Work Order Issue, Purchase Order Receipt</description>
    <inlineHelpText>INVLOCADJ (Inventory Adjust), WOISS (Work Order Issue), PORCPT (Purchase Order Receipt) , SOSHIP (Sales Order Shipment), LOCMOVE (Location Move), CYCLECNT (Cycle Count), INVLOCADD (Inventory Location Add), INVLOCSCRP (Inventory Location Scrap)</inlineHelpText>
    <label>Transaction ID</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INVLOCADJ</fullName>
            </value>
            <value>
                <fullName>LOCMOVE</fullName>
            </value>
            <value>
                <fullName>PORCPT</fullName>
            </value>
            <value>
                <fullName>PORCPTRVS</fullName>
            </value>
            <value>
                <fullName>PORVRS</fullName>
            </value>
            <value>
                <fullName>SOSHIP</fullName>
            </value>
            <value>
                <fullName>SORVRS</fullName>
            </value>
            <value>
                <fullName>WOISS</fullName>
            </value>
            <value>
                <fullName>WOISSRVS</fullName>
            </value>
            <value>
                <fullName>WORVRS</fullName>
            </value>
            <value>
                <fullName>CYCLECNT</fullName>
            </value>
            <value>
                <fullName>INVLOCADD</fullName>
            </value>
            <value>
                <fullName>INVLOCSCRP</fullName>
            </value>
            <value>
                <fullName>WORCPT</fullName>
            </value>
            <value>
                <fullName>WORCPTRVS</fullName>
            </value>
            <value>
                <fullName>WOISSEXP</fullName>
            </value>
            <value>
                <fullName>WOISSEXPRVS</fullName>
            </value>
            <value>
                <fullName>WOCLOSE</fullName>
            </value>
            <value>
                <fullName>INVISSUE</fullName>
            </value>
            <value>
                <fullName>UNITPRICECHANGE</fullName>
            </value>
            <value>
                <fullName>SOISS</fullName>
                <isActive>false</isActive>
                <label>SOISS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>