sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Transaction_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Quantity__c</fullName>
    <inlineHelpText>The quantity affecting the transaction</inlineHelpText>
    <label>Transaction Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>