sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Transaction_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this transaction was reversed</description>
    <inlineHelpText>Checked if this transaction was reversed</inlineHelpText>
    <label>Transaction Reversed ?</label>
    <type>Checkbox</type>
</CustomField>