sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Value__c</fullName>
    <formula>(Transaction_Quantity__c * Item_Unit_Price__c) + (Transaction_Quantity__c *  VAT_Amount__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>