sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount__c</fullName>
    <label>Unit Vat Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>