sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/fields/Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vendor Account</description>
    <inlineHelpText>Vendor Account</inlineHelpText>
    <label>Vendor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Vendor_Account</relationshipName>
    <type>Lookup</type>
</CustomField>