sfSandBoxCode/force-app/main/default/objects/Inventory_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item__c</columns>
    <columns>Quantity_Impact__c</columns>
    <columns>Quantity_At_Location__c</columns>
    <columns>Transaction_Quantity__c</columns>
    <columns>Transaction_Value__c</columns>
    <columns>Transaction_ID__c</columns>
    <columns>Journal_Entry_Number__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>